Fixing route and setting swagger
